# VIOLearning_Note_Code

./: README.md
Third Lib/: 安装库的 order
ch1/: CMakeLists.txt  Eigen.cpp
ch2/: readme.md
ch2/vio_data_simulation-master/src/: param.h
ch2/vio_data_simulation-ros_version/src/: gener_alldata.cpp
ch3/: CMakeLists.txt  readme.md.txt
ch3/app/: CMakeLists.txt  CurveFitting.cpp
ch3/backend/: CMakeLists.txt  edge.h  problem.cc  problem.h
ch3/data/: Lamda.txt  draw.py
ch4/: CMakeLists.txt  hessian_nullspace_test.cpp
ch5/: CMakeLists.txt
ch5/app/: CMakeLists.txt  CurveFitting.cpp  TestMonoBA.cpp
ch5/backend/: CMakeLists.txt  edge.h  edge_imu.cc  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cc  edge_reprojection.h  imu_integration.h  loss_function.h  problem.cc  problem.h  vertex.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point_xyz.h  vertex_pose.h
ch5/frontend/: CMakeLists.txt  camera.h  feature.h  frame.h  map_point.h
ch5/utils/: tic_toc.h
ch6/: CMakeLists.txt  triangulate.cpp
ch7/: CMakeLists.txt  dogleg.cpp  dogleg.h  main.cpp  readme.txt  trustRegion.cpp  trustRegion.h
final project/: CMakeLists.txt  版本说明.md
final project/config/: MH_05_cam0.txt  MH_05_imu0.txt  euroc_config.yaml  imu_pose.txt  imu_pose_noise.txt  imu_pose_noise_-x3.txt  imu_pose_noise_3.txt  imu_pose_noise_x3.txt  simu_config.yaml  time.txt
final project/include/: System.h  feature_tracker.h
final project/src/: System.cpp  estimator.cpp  feature_tracker.cpp
final project/test/: CurveFitting.cpp  Simulation_data_test.cpp  run_euroc.cpp
(+608 files in other folders)
